--- a/src/components/AccordionItem/AccordionItem.css
+++ b/src/components/AccordionItem/AccordionItem.css
@@ -1,3 +1,44 @@
-.Acc-title{
-  color: red;
+.Acc-wrapper{
+  background: white;
+  padding: 1rem 1.5rem;
+  border-radius: .5rem;
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  overflow: hidden;
+  margin-bottom: 1rem;
 }
+
+.Acc-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 1rem; */
+  cursor: pointer;
+}
+
+.Acc-title{
+  margin-bottom: 1rem;
+}
+
+.Acc-content{
+  /* max-height: 0; */
+  overflow: hidden;
+  transition: max-height 0.4s ease;
+}
+
+
+.Icon-arrow{
+  width: 16px;
+  height: 16px;
+  transition: transform 0.3s ease;
+}
+
+.Icon-arrow.rotate{
+  transform: rotate(180deg);
+}
+
+.Acc-content-inner{
+  padding: 1rem;
+}
+
