--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,16 @@ a {
 a:hover {
   color: #535bf2;
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--color-bg);
@@ -36,6 +41,11 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+p{
+  text-wrap: pretty;
+  text-align: left;
 }
 
 button {
