--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,13 @@ a:hover {
   box-sizing: border-box;
 }
 
+img{
+  display: block;
+  margin: 0;
+  padding: 0;
+  /* margin-top: -10px; */
+}
+
 body {
   margin: 0;
   display: flex;
@@ -41,6 +48,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-bottom: 2rem;
 }
 
 p{
